--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,7 @@
   <path id="libjars.path.id">
     <fileset dir="${lib.dir}/" includes="cloud9*.jar"/>
     <fileset dir="${lib.dir}/" includes="guava*.jar"/>
+  	<fileset dir="${lib.dir}/" includes="bliki*.jar"/>
   </path>
 
   <property name="ivy.install.version" value="2.2.0"/>
@@ -156,9 +157,6 @@
 
     <echo file="./etc/hadoop-cluster.${suffix}" message="${script_prefix}" />
     <echo file="./etc/hadoop-cluster.${suffix}" message="hadoop jar ${basedir}/${dist.dir}/${artifactId}-${version}.jar ${param_prefix}1 -libjars ${libjars.path.id} ${param_prefix}2 ${param_prefix}3 ${param_prefix}4 ${param_prefix}5 ${param_prefix}6 ${param_prefix}7 ${param_prefix}8 ${param_prefix}9 ${param_prefix}{10} ${param_prefix}{11} ${param_prefix}{12} ${param_prefix}{13} ${param_prefix}{14} ${param_prefix}{15} ${param_prefix}{16} ${param_prefix}{17} ${param_prefix}{18} ${param_prefix}{19} ${param_prefix}{20}${line.separator}" append="true" />
-  	
-  	<echo file="./etc/hadoop-streaming.${suffix}" message="${script_prefix}" />
-  	<echo file="./etc/hadoop-streaming.${suffix}" message="hadoop jar lib/hadoop-streaming-2.0.0-cdh4.2.0.jar ${basedir}/${dist.dir}/${artifactId}-${version}.jar ${param_prefix}1 -libjars lib2/wikihadoop-0.2.jar ${libjars.path.id} ${param_prefix}2 ${param_prefix}3 ${param_prefix}4 ${param_prefix}5 ${param_prefix}6 ${param_prefix}7 ${param_prefix}8 ${param_prefix}9 ${param_prefix}{10} ${param_prefix}{11} ${param_prefix}{12} ${param_prefix}{13} ${param_prefix}{14} ${param_prefix}{15} ${param_prefix}{16} ${param_prefix}{17} ${param_prefix}{18} ${param_prefix}{19} ${param_prefix}{20}${line.separator}" append="true" />
   	
      <chmod dir="./etc/" perm="ugo+rx" includes="**/*.sh"/>
   </target>
