--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="lib" path="lib/avro-1.7.3.jar"/>
 	<classpathentry kind="lib" path="lib/bliki-core-3.0.16.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-2.2.1-v20090111.jar"/>
-	<classpathentry kind="lib" path="lib/cloud9-1.4.13.jar"/>
+	<classpathentry kind="lib" path="lib/cloud9-1.4.13.jar" sourcepath="/Users/weissman/.m2/repository/edu/umd/cloud9/1.4.13/cloud9-1.4.13-sources.jar"/>
 	<classpathentry kind="lib" path="lib/collections-generic-4.01.jar"/>
 	<classpathentry kind="lib" path="lib/colt-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
@@ -37,18 +37,6 @@
 	<classpathentry kind="lib" path="lib/guava-13.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/guice-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/guice-servlet-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-annotations-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-auth-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-common-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-hdfs-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-core-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-streaming-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-yarn-api-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-yarn-common-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-yarn-server-common-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-yarn-server-nodemanager-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-yarn-server-resourcemanager-2.0.0-cdh4.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hadoop-yarn-server-web-proxy-2.0.0-cdh4.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/hsqldb-1.8.0.10.jar"/>
 	<classpathentry kind="lib" path="lib/htmlparser-1.6.jar"/>
@@ -102,5 +90,21 @@
 	<classpathentry kind="lib" path="lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/tools-1.5.0.jar"/>
 	<classpathentry kind="lib" path="lib/xmlenc-0.52.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-annotations-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-auth-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-common-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-hdfs-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-common-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-core-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-jobclient-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-mapreduce-client-shuffle-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-streaming-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-api-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-client-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-common-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-server-common-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-server-nodemanager-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-server-resourcemanager-2.0.0-cdh4.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-yarn-server-web-proxy-2.0.0-cdh4.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
