--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
-<project name="mapreduce-assignments" default="scripts"
+<project name="wikiduper" default="scripts"
          xmlns:ivy="antlib:org.apache.ivy.ant" xmlns:artifact="antlib:org.apache.maven.artifact.ant" basedir=".">
-  <description>MapReduce assignment</description>
+  <description>Wikiduper build</description>
 
   <property name="lib.dir" value="lib" />
   <property name="build.dir" value="build"/>
@@ -9,7 +9,7 @@
   <property name="test.dir" location="test" />
   <property name="javadoc.dir" location="docs/api/" />
 
-  <property name="artifactId" value="mapreduce-assignment" />
+  <property name="artifactId" value="wikiduper" />
   <property name="version" value="0.0.1"/>
 
   <!-- paths used for compilation and run  -->
@@ -157,7 +157,7 @@
 
     <echo file="./etc/hadoop-cluster.${suffix}" message="${script_prefix}" />
     <echo file="./etc/hadoop-cluster.${suffix}" message="hadoop jar ${basedir}/${dist.dir}/${artifactId}-${version}.jar ${param_prefix}1 -libjars ${libjars.path.id} ${param_prefix}2 ${param_prefix}3 ${param_prefix}4 ${param_prefix}5 ${param_prefix}6 ${param_prefix}7 ${param_prefix}8 ${param_prefix}9 ${param_prefix}{10} ${param_prefix}{11} ${param_prefix}{12} ${param_prefix}{13} ${param_prefix}{14} ${param_prefix}{15} ${param_prefix}{16} ${param_prefix}{17} ${param_prefix}{18} ${param_prefix}{19} ${param_prefix}{20}${line.separator}" append="true" />
-  	
+
      <chmod dir="./etc/" perm="ugo+rx" includes="**/*.sh"/>
   </target>
 
