--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,6 @@
 	<classpathentry kind="lib" path="lib/avro-1.7.3.jar"/>
 	<classpathentry kind="lib" path="lib/bliki-core-3.0.16.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-2.2.1-v20090111.jar"/>
-	<classpathentry kind="lib" path="lib/cloud9-1.4.13.jar" sourcepath="/Users/weissman/.m2/repository/edu/umd/cloud9/1.4.13/cloud9-1.4.13-sources.jar"/>
 	<classpathentry kind="lib" path="lib/collections-generic-4.01.jar"/>
 	<classpathentry kind="lib" path="lib/colt-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
@@ -107,5 +106,6 @@
 	<classpathentry kind="lib" path="lib/hadoop-yarn-server-resourcemanager-2.0.0-cdh4.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-yarn-server-web-proxy-2.0.0-cdh4.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/ivory-0.12.0.jar"/>
+	<classpathentry kind="lib" path="lib/cloud9-1.4.14.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
