--- a/.classpath
+++ b/.classpath
@@ -28,7 +28,7 @@
 	<classpathentry kind="lib" path="lib/concurrent-1.3.4.jar"/>
 	<classpathentry kind="lib" path="lib/core-3.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="lib/guava-13.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/guava-13.0.1.jar" sourcepath="/Users/weissman/.m2/repository/com/google/guava/guava/13.0.1/guava-13.0.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/guice-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/guice-servlet-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
@@ -99,10 +99,11 @@
 	<classpathentry kind="lib" path="lib/hadoop-yarn-server-nodemanager-2.0.0-cdh4.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-yarn-server-resourcemanager-2.0.0-cdh4.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-yarn-server-web-proxy-2.0.0-cdh4.2.1.jar"/>
-	<classpathentry kind="lib" path="lib/ivory-0.12.0.jar"/>
-	<classpathentry kind="lib" path="lib/cloud9-1.4.14.jar" sourcepath="/Users/weissman/.m2/repository/edu/umd/cloud9/1.4.14/cloud9-1.4.14-sources.jar"/>
 	<classpathentry kind="lib" path="lib/commons-configuration-1.8.jar"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/ivory-0.12.1.jar" sourcepath="/Users/weissman/.m2/repository/cc/ivory/ivory/0.12.1/ivory-0.12.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/cloud9-1.4.15.jar"/>
+	<classpathentry kind="lib" path="lib/wikiclean-0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
